<resources>
    <string name="app_name">TwoCatsAmigurumi</string>
    <string name="tv_cargando">Cargando contenido</string>
    <string name="efab_text_create">MÁS</string>
    <string name="Product_empty_cart">Carrito vacío</string>
    <string name="product_preview_cart">Ver carrito</string>
    <string name="mssg_bienvenida">Bienvenido a 2CatsAmigurumi</string>
    <string name="mssg_despedida">Hasta pronto!</string>
    <string name="mssg_error_no_network">Problemas de conexión</string>
    <string name="mssg_error_codigo_error">Error. Inténtelo más tarde.</string>
    <string name="menu_title_sign_out">Cerrar Sesión</string>
    <string name="mssg_sign_out_success">Hasta pronto!</string>
    <string name="mssg_sign_out_failure">Error al cerrar la sesión</string>
    <string name="mssg_error_consultar_datos">Error al consultar los datos en la base de datos.</string>
    <string name="cart_buy_name">Carrito de compra</string>
    <string name="efab_pay">PAGAR</string>
    <string name="cart_name_add_cart">AÑADIR AL CARRITO</string>
    <string name="cart_description_text">Descrición del producto</string>
    <string name="text_test_avaiables">Disponibles: %1$d</string>
    <string name="text_test_total">Total: %1$.2f€  (%2$d x %3$.2f€)</string>
    <string name="ib_description_remove">Quitar productos del carrito</string>
    <string name="ib_description_add">Añadir cantidad de productos al carrito</string>
    <string name="product_full_cart">Total: %1$.2f€</string>
    <string name="btn_follow_package">LOCALIZAR</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_products">Productos: Patrón Mariquita Lola, patrón zorrito, patrones ranitas</string>
    <string name="order_price_total">Total: %1$.2f€</string>
    <string name="chip_text_help">¿Necesitas ayuda?</string>
    <string name="toast_order_correct_done">Pedido realizado correctamente</string>
    <string name="toast_order_incorrect_done">No se ha podido realizar el pedido.</string>
    <string name="order_status_ordered">¡Pedido realizado!</string>
    <string name="order_status_preparing">Preparando su pedido...</string>
    <string name="order_status_sent">¡Su pedido ha sido enviado!</string>
    <string name="order_status_in_distribution">¡Su pedido está en reparto!</string>
    <string name="order_status_delivered">¡Pedido entregado!</string>
    <string name="order_status_error">Ha habido problemas con su pedido</string>
    <string name="toast_error_consult_location">Error al consultar la localización</string>
    <string name="order_title">Historial de compras</string>
    <string name="track_title">Localización pedido</string>
    <string name="text_input_layout_chat">Escribe tu mensaje</string>
    <string name="snackbar_error_chat">Fallo al cargar el chat</string>
    <string name="snackbar_error_borrar">El mensaje NO ha podido ser borrado</string>
    <string name="snackbar_mensaje_borrado">Mensaje borrado correctamente</string>
    <string name="chat_title">Soporte pedidos</string>
    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>

    <string name="facebook_application_id" translatable="false">1004485827449038</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1004485827449038</string>
    <string name="pref_fcm_title">Recibir notificaciones</string>
    <string name="pref_offers_key">pref_offers</string>
    <string name="pref_title">Ofertas y promociones</string>
    <string name="toast_notificaciones_active">Notificaciones activadas</string>
    <string name="toast_notificaciones_not_active">Notificaciones desactivadas</string>
    <string name="menu_title_settings">Settings</string>
    <string name="settings_topic_offers">Topic_offers</string>

</resources>