<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_dark"
    android:focusable="true"
    android:clickable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLocation"
        android:background="@color/blue_dark"
        android:layout_width="@dimen/padding_none"
        android:layout_height="@dimen/padding_none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:rotation="90"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintDimensionRatio="1:1"
        >
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:layout_marginBottom="@dimen/dimenssion_14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:indicatorColor="@color/blue_light"
            app:trackColor="@color/blue_dark"
            tools:progress="34"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <CheckBox
        android:id="@+id/cbOrdered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_ordered"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/blue_light"
        android:shadowColor="@color/blue_light"
        app:layout_constraintStart_toStartOf="@id/clLocation"
        app:layout_constraintTop_toTopOf="@id/clLocation"
        />
    <CheckBox
        android:id="@+id/cbPrepared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_preparing"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/blue_light"
        app:layout_constraintStart_toStartOf="@id/clLocation"
        app:layout_constraintTop_toBottomOf="@+id/cbOrdered"
        app:layout_constraintBottom_toTopOf="@+id/cbSent"
        />
    <CheckBox
        android:id="@+id/cbSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_sent"
        android:textColor="@color/blue_light"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="@id/clLocation"
        app:layout_constraintTop_toBottomOf="@+id/cbPrepared"
        app:layout_constraintBottom_toTopOf="@+id/cbInDistribution"
        />
    <CheckBox
        android:id="@+id/cbInDistribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_in_distribution"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/blue_light"
        app:layout_constraintStart_toStartOf="@id/clLocation"
        app:layout_constraintTop_toBottomOf="@id/cbSent"
        app:layout_constraintBottom_toTopOf="@+id/cbDelivered"
        />
    <CheckBox
        android:id="@+id/cbDelivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_delivered"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/blue_light"
        app:layout_constraintStart_toStartOf="@id/clLocation"
        app:layout_constraintBottom_toBottomOf="@id/clLocation"
        />

</androidx.constraintlayout.widget.ConstraintLayout>