<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_light"
    android:layout_margin="@dimen/common_padding_default"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvStatus"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            tools:text="@string/order_status"
            android:text="@string/order_status"
            android:textColor="@color/blue_dark"
            android:layout_margin="@dimen/common_padding_default"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintTop_toBottomOf="@id/tvID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvID"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            android:text="@string/order_ID"
            android:textColor="@color/blue_dark"
            android:layout_margin="@dimen/common_padding_default"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProductNames"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            tools:text="@string/order_products"
            android:textColor="@color/blue_dark"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            android:text="@string/order_price_total"
            tools:text="@string/order_price_total"
            android:textColor="@color/blue_dark"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintTop_toBottomOf="@id/tvProductNames"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/chip_text_help"
            android:textColor="@color/blue_light"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:chipStrokeColor="@color/white"
            app:chipStrokeWidth="@dimen/stroke_car_dim"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            android:text="@string/btn_follow_package"
            app:icon="@drawable/ic_shipping"
            app:iconTint="@color/blue_light"
            android:textColor="@color/blue_light"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/stroke_car_dim"
            app:iconGravity="textEnd"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:backgroundTint="@color/blue_dark"
            app:layout_constraintEnd_toStartOf="@+id/chipChat"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>