<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="@dimen/product_cart_preview_height"
        android:text="@string/Product_empty_cart"
        app:layout_constraintEnd_toStartOf="@+id/mBtnCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/common_padding_normal"
        android:layout_marginEnd="@dimen/common_padding_min"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mBtnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_preview_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
        app:layout_constraintTop_toTopOf="@+id/tvTotal"
        android:layout_marginEnd="@dimen/common_padding_normal"
        android:layout_marginStart="@dimen/common_padding_min"
        android:theme="@drawable/shapes"
        />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvProducts"
        android:layout_width="@dimen/padding_none"
        android:layout_height="@dimen/padding_none"
        android:orientation="horizontal"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTotal">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_product"/>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/llProgress"
        android:layout_width="@dimen/padding_none"
        android:layout_height="@dimen/padding_none"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cargando"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>